--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -48,6 +48,11 @@
     text-align: center;
 }
 
+.loginButton:disabled {
+    cursor: not-allowed;
+    background-color: rgb(240, 148, 148);
+}
+
 .loginRegisterButton {
     position: absolute;
     top: 60px;
