--- a/client/src/components/topbar/TopBar.css
+++ b/client/src/components/topbar/TopBar.css
@@ -1,6 +1,6 @@
 .top {
     width: 100%;
-    height: 50px;
+    height: 70px;
     background-color: white;
     position: sticky;
     top: 0;
@@ -29,7 +29,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    object-fit: contain;
+    cursor: pointer;
 }
 
 .topCenter {
